Material-Icons - Ensure text remains visible during webfont load

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/material-icons.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/material-icons.css
@@ -8,6 +8,7 @@
     url("../font/material-icons/MaterialIcons-Regular.woff2") format('woff2'),
     url("../font/material-icons/MaterialIcons-Regular.woff") format('woff'), /* Modern Browsers */
     url("../font/material-icons/MaterialIcons-Regular.ttf") format('truetype'); /* Safari, Android, iOS */
+    font-display: swap;
 }
 
 .material-icons {
